# django-tdd-docker

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt  setup.cfg
backend/drf_project/: settings.py  urls.py
backend/movies/: serializers.py  urls.py  views.py
backend/movies/migrations/: 0001_initial.py  0002_movie.py
backend/tests/movies/: test_serializers.py  test_views.py
