[tool.poetry]
name = "django-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Gilson Filho <me@gilsondev.in>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
djangorestframework = "^3.11.0"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
pytest-django = "^3.9.0"
flake8 = "^3.8.2"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
